update with hero block for video redesign

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -12,14 +12,4 @@ body {
 @import "src/less/global/base_buttons.less";
 
 // Modules
-@import "src/less/global/modules/producer-title-banner.less"; // Producer-title-banner.html:
-@import "src/less/global/modules/producer-hero-banner.less"; // Producer-hero-banner.html:
-@import "src/less/global/modules/producer-giving.less"; // Producer-giving.html:
-@import "src/less/global/modules/producer-events.less"; // Producer-events.html:
-@import "src/less/global/modules/producer-facebook.less"; // Producer-facebook.html:
-@import "src/less/global/modules/producer-testimonial.less"; // Producer-testimonial.html:
-@import "src/less/global/modules/producer-engaged.less"; // Producer-engaged.html:
-
-// member-list
-@import "src/less/global/modules/producer-member-list.less"; // Producer-member-list.html:
-@import "src/less/global/modules/producer-member-archive.less"; // producer-member-archive.html:
+@import "src/less/global/modules/video-hero.less"; // Vide-Hero
