update with the video redesign hero banner

--- a/src/less/global/modules/video-hero.less
+++ b/src/less/global/modules/video-hero.less
@@ -4,3 +4,150 @@ Video Hero
 =====================================================================
 */
 @import "src/less/global/base_buttons.less";
+
+
+.video-hero {
+    padding: 60px 20px;
+    background-image: linear-gradient(180deg, #373737 0%, #161616 100%);
+    color: #fff;
+    z-index: 1;
+
+    &-wrapper {
+        max-width: 1240px;
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        grid-gap: 30px;
+        margin: 0 auto;
+    }
+
+    &-main {
+
+        z-index: 1;
+        position: relative;
+
+        &-header {
+            display: flex;
+            flex-direction: row;
+            align-items: baseline;
+            margin-bottom: 20px;
+
+            p {
+                margin: 0 0 0 15px;
+            }
+        }
+
+        &-body {
+            &-link {
+                position: relative;
+                display: inline-block;
+                width: 100%;
+
+                &:hover svg g#circle {
+                    fill: #fff;
+                    transition: fill 0.3s ease-in-out;
+
+                    polygon#arrow {
+                        fill: #000;
+                        transition: fill 0.2s ease-in-out;
+                    }
+
+                }
+
+                &:after {
+                    content: "";
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    background-color: rgba(0, 0, 0, 0.4);
+                    z-index: 2;
+                }
+
+                img {
+                    display: block;
+                    z-index: 0;
+                    position: relative;
+                    mix-blend-mode: multiply;
+                    width: 100%;
+                }
+
+                svg {
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    z-index: 3;
+                }
+            }
+
+            &-content {
+                &-time {}
+
+            }
+
+
+        }
+    }
+
+    &-side {
+        &-list {
+            &-item {
+                border-bottom: 1px solid rgba(216, 216, 216, 0.20);
+                display: grid;
+                grid-template-columns: 1fr 2fr;
+
+                &:last-child {
+                    border-bottom: none;
+                }
+
+                &-link {
+                    position: relative;
+                    display: inline-block;
+                    z-index: 2;
+                    width: 100%;
+
+                    &:hover svg g#circle {
+                        fill: #fff;
+                        transition: fill 0.3s ease-in-out;
+
+                        polygon#arrow {
+                            fill: #000;
+                            transition: fill 0.2s ease-in-out;
+                        }
+
+                    }
+
+                    &:after {
+                        content: "";
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        background-color: rgba(0, 0, 0, 0.4);
+                        z-index: 2;
+                    }
+
+                    img {
+                        display: block;
+                        z-index: 2;
+                        position: relative;
+                        mix-blend-mode: multiply;
+                        width: 100%;
+                    }
+
+                    svg {
+                        position: absolute;
+                        bottom: 10px;
+                        left: 10px;
+                        z-index: 4;
+                    }
+
+                }
+
+                &-content {}
+            }
+        }
+    }
+}
