--- a/src/less/global/modules/video-hero.less
+++ b/src/less/global/modules/video-hero.less
@@ -11,13 +11,19 @@ Video Hero
     background-image: linear-gradient(180deg, #373737 0%, #161616 100%);
     color: #fff;
     z-index: 1;
-
+    .max-width-mixin(@tablet; {
+        padding: 30px 20px;
+    });
     &-wrapper {
         max-width: 1240px;
         display: grid;
-        grid-template-columns: 2fr 1fr;
+        grid-template-columns: 3fr 2fr;
         grid-gap: 30px;
         margin: 0 auto;
+        .max-width-mixin(@tablet; {
+            grid-template-columns: 1fr;
+            grid-gap: 0px;
+        });
     }
 
     &-main {
@@ -83,6 +89,9 @@ Video Hero
 
             &-content {
                 &-time {}
+                h3 {
+                    font-size: 30px;
+                }
 
             }
 
@@ -91,14 +100,28 @@ Video Hero
     }
 
     &-side {
+        margin-top: 10px;
+
         &-list {
             &-item {
-                border-bottom: 1px solid rgba(216, 216, 216, 0.20);
+                border-bottom: 1px solid rgba(216,216,216,.2);
                 display: grid;
                 grid-template-columns: 1fr 2fr;
+                grid-gap: 20px;
+                padding: 20px 0;
+                align-items: center;
+                justify-content: center;
+                .max-width-mixin(@mobile; {
+                    grid-template-columns: 1fr;
+                    grid-gap: 0px;
+                });
 
+                &:first-of-type{
+                    padding: 0px 0px 20px 0;
+                }
                 &:last-child {
                     border-bottom: none;
+                    padding: 20px 0 0 0;
                 }
 
                 &-link {
@@ -146,7 +169,16 @@ Video Hero
 
                 }
 
-                &-content {}
+                &-content {
+                    font-weight: bold;
+                    p:nth-child(1) {
+                        margin: 0;
+                        font-weight: normal;
+                    }
+                    p:nth-child(2) {
+                        margin: 10px 0 0 0;
+                    }
+                }
             }
         }
     }
