update with video grid

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -13,3 +13,4 @@ body {
 
 // Modules
 @import "src/less/global/modules/video-hero.less"; // Vide-Hero
+@import "src/less/global/modules/video-list-grid.less"; // Vide-list-grid
