completion of the homepage list

--- a/src/less/global/modules/video-hero.less
+++ b/src/less/global/modules/video-hero.less
@@ -194,6 +194,10 @@ Video Hero
                         gap:7px;
                         align-items: center;
                         margin-bottom: 10px;
+                        .max-width-mixin(@tablet; {
+                            padding: 10px 0;
+                            margin: 0;
+                        });
                         a {
                             color: #6AB1ED;
                             font-weight: 700;
