completion of subpage

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -13,4 +13,6 @@ body {
 
 // Modules
 @import "src/less/global/modules/video-hero.less"; // Vide-Hero
+@import "src/less/global/modules/video-hero-subpage.less"; // Vide-Hero-subpage
+
 @import "src/less/global/modules/video-list-grid.less"; // Vide-list-grid
