update with edits

--- a/src/less/global/modules/video-hero-subpage.less
+++ b/src/less/global/modules/video-hero-subpage.less
@@ -133,6 +133,7 @@ Video Hero
                     display: flex;
                     flex-direction: row;
                     gap: 10px;
+                    flex-wrap: wrap;
                     li {
 
                     }
